fixed display links on tablets,laptops

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -125,8 +125,11 @@ header
             font-size: 1.1rem
 .base-link
     padding: 12px
+    overflow: hidden
     a
         color: black
+        font-size: 30px
+        
 .shorten-links-list
     margin: 30px auto;
     width: 80%
@@ -141,6 +144,7 @@ header
         display: flex
         position: relative
         flex-direction: column
+        align-self: center
         border-top: 1px solid $grayishViolet
         margin-top: 3px
         button
